--- a/css/seanmeverett.css
+++ b/css/seanmeverett.css
@@ -1,7 +1,7 @@
 body {
   padding-bottom: 20px;
   font-family: 'Avenir-Book', sans-serif;
-  text-shadow: 0px 1px 1px rgba(250, 250, 250, 0.9);
+  text-shadow: 0px 1px 0px rgba(250, 250, 250, 0.8);
 }
 @font-face {
   font-family: 'Avenir-Book';
@@ -24,6 +24,15 @@ body {
        font-weight: normal;
        font-style: normal;
 }
+.heavy {
+  font-family: 'Avenir-Black', sans-serif;
+}
+.white {
+  color: #ffffff;
+}
+.black {
+  color: #000000;
+}
 h1,
 h2,
 h3,
@@ -37,20 +46,49 @@ h6,
 .h5,
 .h6 {
   font-family: 'Avenir-Book', sans-serif;
-  color: #000000;
-  text-shadow: 0px 1px 1px rgba(250, 250, 250, 0.9);
 }
 a {
-  color: #008fc6;
+  color: #009b77;
   text-decoration: none;
 }
 a:hover {
-  color: #008fc6;
+  color: #009b77;
+  text-decoration: none;
 }
 .background {
   background-image: url("../img/bg.jpg");
   background-repeat: none;
   background-position: center center;
-  border-bottom: 1px solid #008fc6;
+  border-bottom: 1px solid #009b77;
   height: 800px;
+}
+.status-bar {
+  padding: 10px;
+  color: #ffffff;
+  text-shadow: none;
+  background-color: #000000;
+  height: 50px;
+}
+.panel {
+  background-color: transparent;
+}
+.panel-default>.panel-heading {
+  color: #000000;
+  background-color: transparent;
+  border-color: #ffffff;
+}
+.btn-primary {
+  color: #000000;
+  background-color: transparent;
+  border-color: #ffffff;
+  text-shadow: none;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #ffffff;
+  background-color: #009b77;
+  border-color: #ffffff;
 }
