--- a/css/seanmeverett.css
+++ b/css/seanmeverett.css
@@ -99,3 +99,34 @@ a:hover {
   background-color: #009b77;
   border-color: #ffffff;
 }
+.pulse {
+  -webkit-animation: pulse 4500ms linear;
+  -moz-animation: pulse 4500ms linear;
+  animation: pulse 4500ms linear;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+
+}
+@-moz-keyframes pulse {
+  0% { -moz-transform: scale(1); }
+  30% { -moz-transform: scale(1); }
+  40% { -moz-transform: scale(1.08); }
+  50% { -moz-transform: scale(1); }
+  60% { -moz-transform: scale(1); }
+  70% { -moz-transform: scale(1.05); }
+  80% { -moz-transform: scale(1); }
+  100% { -moz-transform: scale(1); }
+}
+@-webkit-keyframes "pulse" {
+  0% { -webkit-transform: scale(1); }
+  10% { -webkit-transform: scale(1.01); }
+  20% { -webkit-transform: scale(1.02); }
+  30% { -webkit-transform: scale(1.03); }
+  40% { -webkit-transform: scale(1.04); }
+  50% { -webkit-transform: scale(1.04); }
+  60% { -webkit-transform: scale(1.01); }
+  70% { -webkit-transform: scale(1); }
+  80% { -webkit-transform: scale(1); }
+  100% { -webkit-transform: scale(1); }
+}
