--- a/css/seanmeverett.css
+++ b/css/seanmeverett.css
@@ -1,5 +1,4 @@
 /* TYPOGRAPHY
-*
 *******************************************/
 body {
   font-family: 'Montserrat', sans-serif;
@@ -52,7 +51,6 @@ hr {
 
 
 /* NAVIGATION
-*
 *****************************************/
 .navbar {
   font-family: 'Montserrat', sans-serif;
@@ -94,23 +92,51 @@ hr {
 }
 
 
-/* MAILCHIMP
-*
+/* WHEEL NAV
 *******************************************/
-#mc_embed_signup {
- color: #000; 
-}
-#mc-embedded-subscribe-form {
-  border-color: #000;
-}
-#mc_embed_signup input.button {
-  background-color: #000;
-  color:  #fff;
-  border-color: #000;
+#wheelDiv {
+    height: 400px;
+    width: 400px;
+    margin: auto;
 }
 
+#wheelDiv>svg {
+    height: 100%;
+    width: 100%;
+}
+
+@media (max-width: 600px) {
+    #wheelDiv {
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 400px) {
+    #wheelDiv {
+        height: 300px;
+        width: 300px;
+    }
+}
+#piemenu > svg { width: 100%; height: 100%; }
+#piemenu { height: 400px; width: 400px; margin:auto; }
+@media (max-width: 400px) { #piemenu { height: 300px; width: 300px; } }
+
+[class|=wheelnav-piemenu-slice-basic] { fill: #497F4C; stroke: none; }
+[class|=wheelnav-piemenu-slice-selected] { fill: #497F4C; stroke: none; }
+[class|=wheelnav-piemenu-slice-hover] { fill: #497F4C;  stroke: none; fill-opacity: 0.77; cursor: pointer; }
+
+[class|=wheelnav-piemenu-title-basic] { fill: #333; stroke: none; }
+[class|=wheelnav-piemenu-title-selected] { fill: #fff; stroke: none; }
+[class|=wheelnav-piemenu-title-hover] { fill: #222; stroke: none; cursor: pointer; }
+
+.wheelnav-piemenu-spreader-in,
+.wheelnav-piemenu-spreader-out { fill: #444; stroke: #444; stroke-width: 2; cursor: pointer; }
+.wheelnav-piemenu-spreadertitle-in,
+.wheelnav-piemenu-spreadertitle-out { fill: #eee; stroke: #444; cursor: pointer; }
+
+
 /* FOOTER
-*
 *****************************************/
 .footer {
   font-size: 10px;
